importacao do trabalho anterior

--- a/InspiringIPT/InspiringIPT/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Confirmar Passord";
 }
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+<div class="row">
+    
+    <div class="col-md-6" style="text-align:justify">
+        Por-favor vá ao seu e-mail.
+    </div>
+    
 </div>
-	
