--- a/InspiringIPT/InspiringIPT/Views/Account/ResetPassword.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model InspiringIPT.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Atualizar Password";
 }
 
 <h2>@ViewBag.Title.</h2>
