--- a/InspiringIPT/InspiringIPT/Content/Site.css
+++ b/InspiringIPT/InspiringIPT/Content/Site.css
@@ -1,6 +1,76 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image:url(/Imags/wallpaperr.jpg);
+  
+}
+.navbar-default  .navbar-nav > li > a:hover{
+    background-color:#ff0000;
+    color: #ffffff;
+}
+.navbar-default .navbar-nav > li > a:focus, .open{
+    color: #ffffff;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav  > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: white; /*BACKGROUND color for active*/
+    background-color: #0094ff;
+}
+
+.navbar-default {
+    background-color: #4444FF;
+    border-color: #030033;
+}
+textarea {
+  width: 100%;
+  height: 150px;
+}
+
+.navbar-default .navbar-brand {
+  color: #ffffff;
+}
+.navbar-default .navbar-brand:hover {
+    background-color:#2222FF;
+    color: #ffffff;
+}
+.navbar-nav > li > .dropdown-menu {
+    margin-top: 0;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    background-color: #4444FF;
+}
+.nav .caret {
+    border-top-color: #FFFFFF;
+    border-bottom-color: #FFFFFF;
+}
+.navbar-default .navbar-nav > .dropdown > a .caret {
+    border-top-color: #FFFFFF;
+    border-bottom-color: #FFFFFF;
+}
+.navbar-default .navbar-nav > .dropdown > a:hover .caret, .navbar-default .navbar-nav > .dropdown > a:focus .caret {
+    border-top-color: #FFFFFF;
+    border-bottom-color: #FFFFFF;
+}
+.navbar-default .navbar-nav > .open > a .caret, .navbar-default .navbar-nav > .open > a:hover .caret, .navbar-default .navbar-nav > .open > a:focus .caret {
+    border-top-color: #ffffff;
+    border-bottom-color: #FFFFFF;
+}
+.navbar-default .navbar-nav > li > a{
+   color: white; /*Change active text color here*/
+ }
+.navbar .nav > li.dropdown.open.active > a:hover, 
+.navbar .nav > li.dropdown.open > a
+{
+   color: #fff;
+   background-color: #2222FF;
+   border-color: #fff;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    background-color: #4444FF;
+    color: #ffffff;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #ffffff;
+    background-color: #2222FF;
 }
 
 /* Set padding to keep content from hitting the edges */
