--- a/InspiringIPT/InspiringIPT/Views/Account/ConfirmEmail.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "Confirmar Email";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="row">
+    <div class="col-lg-12">
+        <h2 class="page-header">@ViewBag.Title  Inspiring IPT</h2>
+    </div>
+    <div class="col-md-6" style="text-align:justify">
+        <h3>
+            Obrigado por confirmar o e-mail.
+        </h3>
+        @Html.ActionLink("Iniciar Sessão", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink ", @class = "btn btn-success" })
+    </div>
+  
 </div>
