--- a/InspiringIPT/InspiringIPT/Views/Account/ForgotPassword.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model InspiringIPT.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "Esqueceu-se da Password?";
 }
 
 <h2>@ViewBag.Title.</h2>
