--- a/InspiringIPT/InspiringIPT/Views/Shared/Error.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/Error.cshtml
@@ -1,9 +1,25 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Error";
+    ViewBag.Title ="Ora Bolasss..Desculpa! :(";
 }
+<div class="row">
+    <div class="col-lg-12">
+        <h2 class="page-header text-danger">@ViewBag.Title</h2>
+    </div>
+    <div class="col-md-6" style="text-align:center">
+        @{
+            if (String.IsNullOrEmpty(ViewBag.errorMessage))
+            {
+                <h2 class="text-danger">Estamos a trabalhar para a resolução deste problema. Obrigado!</h2>
+            }
+            else
+            {
+                <h2 class="text-danger">@ViewBag.errorMessage</h2>
+            }
+        }
+    </div>
+</div>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+
 
