--- a/InspiringIPT/InspiringIPT/Views/Shared/Lockout.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/Lockout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Locked Out";
+    ViewBag.Title = "Terminar Seção!";
 }
 
 <hgroup>
-    <h1 class="text-danger">Locked out.</h1>
-    <h2 class="text-danger">This account has been locked out, please try again later.</h2>
+    <h1 class="text-danger">Seção Terminada </h1>
+    <h2 class="text-danger">Terminou a seção com exito!</h2>
 </hgroup>
