Site.css: atualização das imagens

--- a/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
     </ol>
     <!-- Wrapper for slides -->
     <br />
-    <div class="carousel-inner" role="listbox" style="border:ridge">
+    <div class="carousel-inner" role="listbox"/>
         <div class="item active">
             <img src="~/Imags/banner/banner1.jpg" alt="Chania" />
             <div class="carousel-caption">
@@ -85,7 +85,7 @@
             <div class="panel-heading">
             </div>
             <div class="panel-body">
-                <div id="cidade" class="carousel slide" data-ride="carousel" style="width:330px;height:185px; border:unset">
+                <div id="cidade" class="carousel slide" data-ride="carousel" style="width:330px;height:185px">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#cidade" data-slide-to="0" class="active"></li>
