--- a/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("Inspiring IPTomar", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
-                <a class="navbar-brand" rel="Index" href="Home" title="Inspiring IPTomar">
+                @Html.ActionLink("Inspiring IPTomar", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @*<a class="navbar-brand" rel="Index" href="Home" title="Inspiring IPTomar">
                     <img style="max-width:90px; margin-top: -7px;"src="~/Imags/logotipo.jpg">
-                </a>
+                </a>*@
            
             </div>
             <div class="navbar-collapse collapse">
@@ -44,13 +44,12 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Colaborador<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Listar Potenciais Alunos", "Lista", "PotencialAluno")</li>
-                                    <li>@Html.ActionLink("Alterar Perfil", "Editar", "Colaboradores")</li>
                                     <li>@Html.ActionLink("Alterar Password", "Index", "Manage")</li>
                                 </ul>
                             </li>                          
                         }
 
-                        @*Colaboradores autenticado tem permissão de:*@
+                        @*Colaboradores autenticado têm permissão de:*@
                         @if (User.IsInRole("Gestores"))
 
                         {
