Index: atualizar o aspeto da página, adicionando novas pastas de imagens

--- a/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
@@ -39,28 +39,35 @@
     <br />
     <div class="carousel-inner" role="listbox"/>
         <div class="item active">
-            <img src="~/Imags/banner/banner1.jpg" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/Imags/banner/banner2.png" alt="Chania" />
+            <img src="~/Imags/banner/banner_4.png" alt="Chania" />
             <div class="carousel-caption">
             </div>
         </div>
 
-        <div class="item">
-            <img src="~/Imags/banner/banner3.jpg" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
-        </div>
-
-        <div class="item">
-            <img src="~/Imags/banner/banner4.jpg" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
+    <div class="item">
+        <img src="~/Imags/banner/banner_7.png" alt="Chania" />
+        <div class="carousel-caption">
         </div>
     </div>
+
+        <div class="item">
+            <img src="~/Imags/banner/banner_1.png" alt="Chania" />
+            <div class="carousel-caption">
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Imags/banner/banner_5.png" alt="Chania" />
+            <div class="carousel-caption">
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Imags/banner/banner_6.png" alt="Chania" />
+            <div class="carousel-caption">
+            </div>
+        </div>
+    
 
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#entrada" role="button" data-slide="prev">
