--- a/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                         <h4 class="modal-title">@TempData["is"]</h4>
                     </div>
                     <div class="modal-body">
-                        
+
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-success" data-dismiss="modal">Fechar</button>
@@ -37,37 +37,37 @@
     </ol>
     <!-- Wrapper for slides -->
     <br />
-    <div class="carousel-inner" role="listbox"/>
-        <div class="item active">
-            <img src="~/Imags/banner/banner_4.png" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
-        </div>
-
-    <div class="item">
-        <img src="~/Imags/banner/banner_7.png" alt="Chania" />
+    <div class="carousel-inner" role="listbox" />
+    <div class="item active">
+        <img src="~/Imags/banner/banner_7_.jpg" alt="Chania" />
         <div class="carousel-caption">
         </div>
     </div>
 
-        <div class="item">
-            <img src="~/Imags/banner/banner_1.png" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
+    <div class="item">
+        <img src="~/Imags/banner/banner_4.jpg" alt="Chania" />
+        <div class="carousel-caption">
         </div>
+    </div>
 
-        <div class="item">
-            <img src="~/Imags/banner/banner_5.png" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
+    <div class="item">
+        <img src="~/Imags/banner/banner_5.jpg" alt="Chania" />
+        <div class="carousel-caption">
         </div>
+    </div>
 
-        <div class="item">
-            <img src="~/Imags/banner/banner_6.png" alt="Chania" />
-            <div class="carousel-caption">
-            </div>
+    <div class="item">
+        <img src="~/Imags/banner/banner_1.jpg" alt="Chania" />
+        <div class="carousel-caption">
         </div>
-    
+    </div>
+
+    <div class="item">
+        <img src="~/Imags/banner/banner_6.jpg" alt="Chania" />
+        <div class="carousel-caption">
+        </div>
+    </div>
+
 
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#entrada" role="button" data-slide="prev">
@@ -78,13 +78,10 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-    
+
 </header>
 <br />
 <div class="row">
-
-    <div class="col-lg-12">
-    </div>
 
     @* inicio slide desporto*@
     <div class="col-md-4">
@@ -103,22 +100,22 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/desporto/desportos.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/desporto/desporto2.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/desporto/desporto3.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/desporto/desporto4.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
@@ -133,7 +130,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div><br />
-                <a href="http://www.iptomarrugby.ipt.pt/?menu=Rugby&lang=pt" style="margin:0px auto;text-align:center;display:block; width:330px;" class="btn btn-success pull-center"> Desporto</a>
+                <a href="http://www.iptomarrugby.ipt.pt/?menu=Rugby&lang=pt" style="margin:0px auto;text-align:center;display:block; width:330px;" class="btn btn-danger pull-center"> Desporto</a>
             </div>
         </div>
     </div>
@@ -156,22 +153,22 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Imags/campos2.jpg" />
+                            <img src="~/Imags/cultura/cultura4.jpg" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/cultura/cultura5.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/cultura/cultura2.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/cultura/cultura1.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
@@ -187,7 +184,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div><br />
-                <a href="http://www.tunatemplaria.com/" style="margin:0px auto; text-align:center; display:block; width:330px;"  class="btn btn-success">Cultura</a>
+                <a href="http://www.tunatemplaria.com/" style="margin:0px auto; text-align:center; display:block; width:330px;" class="btn btn-success">Cultura</a>
             </div>
         </div>
     </div>
@@ -210,22 +207,17 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/associativismo/Associativismo4.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/associativismo/Associativismo3.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
-                            <div class="carousel-caption">
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/associativismo/Associativismo2.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
@@ -241,13 +233,13 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div><br />
-                <a href="https://www.facebook.com/uae.ipt/" style="margin:0px auto; text-align:center; display:block; width:330px;"  class="btn btn-success">Associativismo</a>
+                <a href="https://www.facebook.com/uae.ipt/" style="margin:0px auto; text-align:center; display:block; width:330px;" class="btn btn-info">Associativismo</a>
             </div>
         </div>
     </div>
     @* fim slide Associativismo*@
 
-    @* GRUPO 2.................................................*@
+    @* GRUPO 2.****************************************************************************************@
 
     @* inicio slide estudar*@
     <div class="col-md-4">
@@ -266,22 +258,22 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/estudar/estudar_4_.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/estudar/estudar1.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/estudar/estudar2.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/estudar/estudar_3.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
@@ -296,7 +288,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div><br />
-                <a href="http://www.cda.ipt.pt/?pagina=servicos&seccao=Sala_de_leitura" style="margin:0px auto; text-align:center; display:block; width:330px;"  class="btn btn-success">Estudar</a>
+                <a href="http://www.cda.ipt.pt/?pagina=servicos&seccao=Sala_de_leitura" style="margin:0px auto; text-align:center; display:block; width:330px;" class="btn btn-warning">Estudar</a>
             </div>
         </div>
     </div>
@@ -319,22 +311,17 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Imags/campos2.jpg" />
+                            <img src="~/Imags/alimentacao/alimentacao3.jpg" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/alimentacao/alimentacao1.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
-                            <div class="carousel-caption">
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/alimentacao/alimentacao4.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
@@ -350,7 +337,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div><br />
-                <a href="http://portal2.ipt.pt/pt/ipt/servicos_de_acao_social/" style="margin:0px auto; text-align:center; display:block; width:330px;"  class="btn btn-success">Alimentação</a>
+                <a href="http://portal2.ipt.pt/pt/ipt/servicos_de_acao_social/" style="margin:0px auto; text-align:center; display:block; width:330px;" class="btn btn-primary">Alimentação</a>
             </div>
         </div>
     </div>
@@ -373,22 +360,22 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/alojamento/alojamento2.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/alojamento/alojamento1.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/alojamento/alojamento3.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="item">
-                            <img src="~/Imags/campos2.jpg" alt="Chania" />
+                            <img src="~/Imags/alojamento/alojamento4.jpg" alt="Chania" />
                             <div class="carousel-caption">
                             </div>
                         </div>
@@ -404,7 +391,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div><br />
-                <a href="http://portal2.ipt.pt/pt/ipt/servicos_de_acao_social/apoios_indiretos_alojamento/"  style="margin:0px auto; text-align:center; display:block; width:330px;" class="btn btn-success">Alojamento</a>
+                <a href="http://portal2.ipt.pt/pt/ipt/servicos_de_acao_social/apoios_indiretos_alojamento/" style="margin:0px auto; text-align:center; display:block; width:330px;" class="btn btn-danger">Alojamento</a>
             </div>
         </div>
     </div>
