--- a/InspiringIPT/InspiringIPT/Views/Shared/_LoginPartial.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Olá " + User.Identity.GetUserId() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("Bem-Vindo(a) " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Terminar Sessão</a></li>
         </ul>
