--- a/InspiringIPT/InspiringIPT/Views/Cursos/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Create.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-sm-14" style="background-color:lavenderblush;">
-        <h2 class="page-header">@ViewBag.Title <small>Adicionar novo Curso<i class="glyphicon glyphicon-book"></i></small></h2>
+        <h2 class="page-header">@ViewBag.Title <small>Adicionar Curso<i class="glyphicon glyphicon-book"></i></small></h2>
     </div>
     <div class="col-sm-14" style="background-color:lavender">
 
@@ -65,7 +65,7 @@
                     <div class="form-group" style="text-align:left">
                         <div class="col-md-offset-4 col-md-6">
                             <input type="submit" value="Guardar" class="btn btn-success" />
-                            @Html.ActionLink("Lista dos Cursos", "Index", "", new { @class = "btn btn-info" })
+                            @Html.ActionLink("Listar os Cursos", "Index", "", new { @class = "btn btn-info" })
                         </div>
                     </div>
                     }
