--- a/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
@@ -61,7 +61,7 @@
                     </div>
                 </div>
 
-                @if (User.IsInRole("Colaboradores"))
+                @if (User.IsInRole("Gestores"))
                 {
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10" style="text-align:justify">
