--- a/InspiringIPT/InspiringIPT/Views/Home/About.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/About.cshtml
@@ -1,7 +1,22 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Sobre nós";
 }
+<br />
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
+
+<a class="modal-button" data-content="ef">
+    <img src="~/Imags/estudar/estudar_3.jpg"  style="height:150px;right:auto;"/>
+</a>
+<a class="modal-button" data-content="ef">
+    <img src="~/Imags/estudar/estudar_3.jpg" style="height:150px;right:auto" />
+</a>
+<a class="modal-button" data-content="ef">
+    <img src="~/Imags/estudar/estudar_3.jpg" style="height:150px;right:auto" />
+</a>
+<a class="modal-button" data-content="ef">
+    <img src="~/Imags/estudar/estudar_3.jpg" style="height:150px;right:1px" />
+</a>
+
 
 <p>Use this area to provide additional information.</p>
