--- a/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
@@ -26,14 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <nav class="navbar navbar-inverse bg-success" style="background-color:lightgreen; border-color:yellow; border:ridge;">
+                <nav class="navbar navbar-inverse bg-primary" style="background-color:lightgreen; border-color:lightgreen;">
                         @Html.ActionLink("Inspiring IPTomar", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </nav>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Sobre nós", "About", "Home")</li>
-                    <li>@Html.ActionLink("A nossa equipa", "Ipt", "Home")</li>
+                    <li>@Html.ActionLink("Sobre Nós", "SobreNos", "Home")</li>
+                    <li>@Html.ActionLink("A Nossa Equipa", "Equipa", "Home")</li>
                     <li>@Html.ActionLink("Cursos", "Index", "Cursos")</li>
                     <li>@Html.ActionLink("Inscrever", "Create", "PotencialAluno")</li>
                     <li>@Html.ActionLink("Notícias", "Noticia", "Home")</li>
