Controllers: atualização nas classes , Home e PotencialAluno
Views - Cursos : atualização
           - PotencialAluno : atualização
Shared : _Layout :  atualização

--- a/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model InspiringIPT.Models.Cursos
 
-
 <div class="row">
+    <br />
     <div class="col-sm-14" style="background-color:lavenderblush;">
-        <h2 class="page-header">@ViewBag.Title <medium>Editar Curso <i class="glyphicon glyphicon-education"></i></medium></h2>
+        <h2 class="page-header">@ViewBag.Title <small>Atualizar Curso <i class="glyphicon glyphicon-education"></i></small></h2>
     </div>
     @using (Html.BeginForm())
     {
