--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Details.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Details.cshtml
@@ -1,8 +1,9 @@
 ﻿@model InspiringIPT.Models.PotencialAluno
 
 <div class="row">
+    <br />
     <div class="col-sm-14" style="background-color:lavenderblush;">
-        <h2 class="page-header">@ViewBag.Title <medium> Ver os Detalhes <i class="glyphicon glyphicon-user"></i></medium></h2>
+        <h2 class="page-header">@ViewBag.Title <small> Ver os Detalhes <i class="glyphicon glyphicon-user"></i></small></h2>
     </div>
     <div class="col-sm-14" style="background-color:lavender">
         <dl class="dl-horizontal">
