Controllers: PotencialAluno - adição de alguns metodos
Migrations: Configurations - atualização dos dados

Models: atualização das classes, Cursos, IdentityModels, PotencialAluno e TipoCurso

Views: atualização dos dados

--- a/InspiringIPT/InspiringIPT/Views/Shared/Error.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/Error.cshtml
@@ -12,6 +12,10 @@
             if (String.IsNullOrEmpty(ViewBag.errorMessage))
             {
                 <h2 class="text-danger">Estamos a trabalhar para a resolução deste problema. Obrigado!</h2>
+
+                <div class="col-sm-4" style="width:350px;height:150px;">
+                    <img class="img-responsive" src="~/Imags/manutencao.jpg" alt="10px">
+                </div>
             }
             else
             {
