--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Create.cshtml
@@ -1,120 +1,110 @@
 ﻿@model InspiringIPT.Models.PotencialAluno
 
 <br />
-    <div class="row" style="border:inherit;color:red">
-        <div class="col-sm-14" style="background-color:antiquewhite;">
-            <h2 class="page-header">@ViewBag.Title <small> Candidatura - Potencial Aluno <i class="glyphicon glyphicon-user"></i></small></h2>
-        </div>
-        <div class="col-sm-14" style="background-color:antiquewhite;">
-            @using (Html.BeginForm())
+<div class="row" style="border:inherit;color:red">
+    <div class="col-sm-14" style="background-color:antiquewhite;">
+        <h2 class="page-header">@ViewBag.Title <small> Candidatura - Potencial Aluno <i class="glyphicon glyphicon-user"></i></small></h2>
+    </div>
+    <div class="col-sm-14" style="background-color:antiquewhite;">
+        @using (Html.BeginForm())
             {
-                @Html.AntiForgeryToken()
-                <div class="form-horizontal">
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.AntiForgeryToken()
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                <div class="row">
+                    <div class="form-group">
+                        <br />
+                        @Html.LabelFor(model => model.NomeCompleto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.NomeCompleto, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Nome Completo" } })
+                            @Html.ValidationMessageFor(model => model.NomeCompleto, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu E-mail" } })
+                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Concelho, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Concelho, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Concelho" } })
+                            @Html.ValidationMessageFor(model => model.Concelho, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DataNascimento, "Data de Nascimento:", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir  DD/MM/AAAA" } })
+                            @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Contacto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Contacto, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Contacto" } })
+                            @Html.ValidationMessageFor(model => model.Contacto, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Genero, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.RadioButtonFor(model => model.Genero, "M") Masculino <br />
+                            @Html.RadioButtonFor(model => model.Genero, "F") Feminino
+                            @Html.ValidationMessageFor(model => model.Genero, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.HabAcademicas, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-4">
+                            @Html.EditorFor(model => model.HabAcademicas, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir a sua Habilitação Académica" } })
+                            @Html.ValidationMessageFor(model => model.HabAcademicas, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
                     <div class="row">
-                        <div class="form-group">
-                            <br />
-                            @Html.LabelFor(model => model.NomeCompleto, "Nome Completo:", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-8">
-                                @Html.EditorFor(model => model.NomeCompleto, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Nome Completo" } })
-                                @Html.ValidationMessageFor(model => model.NomeCompleto, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                        @* listagem dos cursos disponíveis no IPT  *@
+                        <table class="table">
+                            <tr><th>Curso</th></tr>
+                            @foreach (var curso in ViewBag.Cursos)
+                            {
+                                <tr>
+                                    <td>
+                                        <input type="checkbox" value="@curso.CursoID" name="ListaDeCursos" /> @curso.NomeCurso
+                                    </td>
+                                </tr>
+                            }
+                        </table>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu E-mail" } })
-                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Concelho, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Concelho, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Concelho" } })
-                                @Html.ValidationMessageFor(model => model.Concelho, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                    <br /><br />
+                    e se se apresentasse aqui um Captcha?
+                    <br /><br />
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.DataNascimento, "Data de Nascimento:", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir  DD/MM/AAAA" } })
-                                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Contacto, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Contacto, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Contacto" } })
-                                @Html.ValidationMessageFor(model => model.Contacto, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Genero, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Genero, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir o seu Genero 'M ou F'" } })
-                                @Html.ValidationMessageFor(model => model.Genero, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.DataInscricao, "Data de Inscrição:", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.DataInscricao, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir  DD/MM/AAAA" } })
-                                @Html.ValidationMessageFor(model => model.DataInscricao, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.HabAcademicas, "Habilitação:", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-4">
-                                @Html.EditorFor(model => model.HabAcademicas, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir a sua Habilitação Académica" } })
-                                @Html.ValidationMessageFor(model => model.HabAcademicas, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-4">
-                                @Html.LabelFor(model => model.CursosFK, "Curso:", htmlAttributes: new { @class = "control-label col-md-4" })
-                                <div class="col-md-offset-1 col-md-10">
-                                    @Html.DropDownList("CursosFK", null, "Escolha uma opção", htmlAttributes: new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.CursosFK, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="col-md-4">
-                                @Html.LabelFor(model => model.AreasFK, "Area:", htmlAttributes: new { @class = "control-label col-md-4" })
-                                <div class="col-md-offset-1 col-md-10">
-                                    @Html.DropDownList("AreasFK", null, "Escolha uma opção", htmlAttributes: new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.AreasFK, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                @Html.LabelFor(model => model.TiposCursosFK, "Tipo de Curso:", htmlAttributes: new { @class = "control-label col-md-5" })
-                                <div class="col-md-offset-1 col-md-10">
-                                    @Html.DropDownList("TiposCursosFK", null, "Escolha uma opção", htmlAttributes: new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.TiposCursosFK, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <br /><br /><br /><br /><br />
-                                <input type="submit" value="Submeter a Inscrição" class="btn btn-success" style="width:305px;height:50px;" />
-                                <p></p>
-                            </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <br /><br /><br /><br /><br />
+                            <input type="submit" value="Submeter a Inscrição" class="btn btn-success" style="width:305px;height:50px;" />
+                            <p></p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-            }
-
-        </div>
+        }
 
     </div>
+
+</div>
