Controller: adição de novos controllers e configuração dos mesmos
Views: adição de novas Views e atualização e configuração dos mesmos

--- a/InspiringIPT/InspiringIPT/Views/Account/Login.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Account/Login.cshtml
@@ -1,6 +1,47 @@
 ﻿@using InspiringIPT.Models
 @model LoginViewModel
 
+@if (TempData["LogSuccess"] != null)
+{
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header modal-header-success">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">@TempData["Reg"]</h4>
+                </div>
+                <div class="modal-body">
+                    <p>@TempData["RegSuccess"]</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+@if (TempData["LogErro"] != null)
+{
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header modal-header-danger">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">@TempData["is"]</h4>
+                </div>
+                <div class="modal-body">
+                    <p>@TempData["LogErro"]</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+}
 <div class="row">
     <div class="col-sm-14" style="background-color:lavenderblush;">
         <h2 class="page-header">@ViewBag.Title <small> Utiliza o seu E-mail e a Password! <i class="glyphicon glyphicon-log-in"></i></small></h2>
