--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/ConfirmaAluno.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/ConfirmaAluno.cshtml
@@ -1,10 +1,25 @@
 ﻿@model InspiringIPT.Models.PotencialAluno
 
 @{
-    ViewBag.Title = "ConfirmaAluno";
+    ViewBag.Title = "Confirma o Potencial Aluno";
 }
 
-<h2>Confirmar inscrição de potencial Aluno</h2>
+@if (TempData["codSucess"] != null)
+{
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-body">
+                    <p>@TempData["codSucess"]</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @Model.NomeCompleto<br />
 @Model.CodigoIdentificacao
