--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Edit.cshtml
@@ -1,5 +1,26 @@
 ﻿@model InspiringIPT.Models.PotencialAluno
 
+
+@if (TempData["SubmitSucess"] != null)
+{
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header modal-header-success">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">@TempData["ad"]</h4>
+                </div>
+                <div class="modal-body">
+                    <p>@TempData["SubmitSucess"]</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 <div class="row">
     <br />
     <div class="col-sm-14" style="background-color:lavenderblush;">
@@ -16,7 +37,7 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.AlunoID)
-                @Html.HiddenFor(model => model.UserID)
+                @Html.HiddenFor(model => model.CodigoIdentificacao)
         
 
                 <div class="form-group">
@@ -84,26 +105,26 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.CursosFK, "Cursos:", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.ListaCursos, "Cursos:", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("CursosFK", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CursosFK, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.ListaCursos, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.AreasFK, "Àreas de Interesse:", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.ListaAreas, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("AreasFK", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.AreasFK, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.ListaAreas, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.TiposCursosFK, "Tipo de Curso:", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.ListaTipoCurso, "Tipo de Curso:", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("TiposCursosFK", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.TiposCursosFK, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.ListaTipoCurso, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
