--- a/InspiringIPT/InspiringIPT/Views/Home/SobreNos.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Home/SobreNos.cshtml
@@ -16,7 +16,7 @@
                 estudar no Instituto Politécnico de Tomar.
             </p>
             <p>Nesta plataforma o aluno pode efectuar a sua pré-inscrição, preechendo o formulário
-               disponibilizado e submeter a sua candidatura.
+               disponibilizado e submeter a sua inscrição.
             </p>
             </div>
             <div class="col-sm-4" style="width:350px;height:150px;">
