--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Create.cshtml
@@ -19,9 +19,9 @@
 }
     <div class="row" style="border:inherit;">
         <div class="col-sm-14" style="background-color:antiquewhite;text-align:center; border:double;">
-            <h2 class="page-header">@ViewBag.Title <small> Candidatura - Potencial Aluno <i class="glyphicon glyphicon-user"></i></small></h2>
+            <h2 class="page-header">@ViewBag.Title <medium> Registo de Potencial Aluno <i class="glyphicon glyphicon-user"></i></medium></h2>
         </div>
-        <div class="col-sm-14" style="background-color:antiquewhite; border:double">
+        <div class="col-sm-14" style="background-color:lavender; border:double">
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.DataNascimento, "Data de Nascimento:", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = " form-control", @placeholder = "Introduzir  DD/MM/AAAA" } })
                                 @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
