--- a/InspiringIPT/InspiringIPT/Views/Areas/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Areas/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InspiringIPT.Models.Areas
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Adicionar Nova Área";
 }
 @if (TempData["createArea"] != null)
 {
@@ -24,7 +24,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Areas</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -37,7 +37,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Adicionar Nova Área" class="btn btn-success" />
             </div>
         </div>
     </div>
