--- a/InspiringIPT/InspiringIPT/Views/Areas/Delete.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Areas/Delete.cshtml
@@ -20,7 +20,7 @@
     </div>
 }
 <div>
-    <h4>Areas</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -37,8 +37,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Apagar" class="btn btn-default" /> |
+            @Html.ActionLink("Voltar a Lista", "Index")
         </div>
     }
 </div>
