--- a/InspiringIPT/InspiringIPT/Views/Escolas/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Escolas/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InspiringIPT.Models.Escola
 
 @{
-    ViewBag.Title = "Adicionar nova Escola";
+    ViewBag.Title = "Adicionar Nova Escola";
 }
 
 @if (TempData["createEscola"] != null)
@@ -25,7 +25,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Escola</h4>
+       
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -46,14 +46,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Adicionar Nova Escola" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar a Lista", "Index")
 </div>
 
 @section Scripts {
