--- a/InspiringIPT/InspiringIPT/Views/Escolas/Delete.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Escolas/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InspiringIPT.Models.Escola
 
 @{
-    ViewBag.Title = "Apagar Escola";
+    ViewBag.Title = "Eliminar Escola";
 }
 @if (TempData["deleteEscola"] != null)
 {
@@ -45,8 +45,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar Escola" class="btn btn-default" /> |
+            @Html.ActionLink("Voltar a Lista", "Index")
         </div>
     }
 </div>
