--- a/InspiringIPT/InspiringIPT/Views/Escolas/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Escolas/Edit.cshtml
@@ -24,7 +24,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Escola</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.EscolaID)
@@ -47,14 +46,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar Alteração" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar a Lista", "Index")
 </div>
 
 @section Scripts {
