--- a/InspiringIPT/InspiringIPT/Views/TipoCurso/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/TipoCurso/Create.cshtml
@@ -25,8 +25,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>TipoCurso</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -38,14 +37,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Adicionar" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar a Lista", "Index")
 </div>
 
 @section Scripts {
