--- a/InspiringIPT/InspiringIPT/Views/TipoCurso/Delete.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/TipoCurso/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InspiringIPT.Models.TipoCurso
 
 @{
-    ViewBag.Title = "Apagar outro Tipo de Curso";
+    ViewBag.Title = "Eliminar Tipo de Curso";
 }
 @if (TempData["deleteTCurso"] != null)
 {
@@ -20,8 +20,6 @@
     </div>
 }
 <div>
-    <h4>TipoCurso</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Tipo)
@@ -37,8 +35,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-warning" /> |
+            @Html.ActionLink("Voltar a Lista", "Index")
         </div>
     }
 </div>
