--- a/InspiringIPT/InspiringIPT/Views/TipoCurso/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/TipoCurso/Edit.cshtml
@@ -24,8 +24,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>TipoCurso</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.TipoID)
 
@@ -39,14 +38,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar Alteração" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar a Lista", "Index")
 </div>
 
 @section Scripts {
