--- a/InspiringIPT/InspiringIPT/Views/TipoCurso/Index.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/TipoCurso/Index.cshtml
@@ -1,13 +1,11 @@
 ﻿@model IEnumerable<InspiringIPT.Models.TipoCurso>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista";
 }
 
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Adicionar Novo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -23,9 +21,9 @@
             @Html.DisplayFor(modelItem => item.Tipo)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.TipoID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.TipoID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.TipoID })
+            @Html.ActionLink("Editar Tipo Curso", "Edit", new { id=item.TipoID }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.TipoID }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.TipoID })
         </td>
     </tr>
 }
